2007-10-07  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_vcard_odbc.erl: Reverted previous change

2007-10-06  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_vcard_odbc.erl: Bugfix

	* src/mod_offline_odbc.erl: Bugfix

2007-10-01  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_auth_pam.erl: Support for PAM authentication
	(thanks to Evgeniy Khramtsov)
	* src/ejabberd.cfg.example: Likewise
	* src/configure.ac: Likewise
	* src/aclocal.m4: Likewise
	* src/Makefile.in: Likewise
	* examples/ejabberd.pam: Likewise
	* doc/guide.tex: Likewise

2007-09-28  Christophe Romain  <christophe.romain@process-one.net>

	* src/odbc/mysql.sql: Added some missing NOT NULL restrictions
	* src/odbc/mssql.sql: Likewise
	* src/odbc/pg.sql: Likewise

2007-09-27  Christophe Romain  <christophe.romain@process-one.net>

	* src/ejabberdctl.template: apply rootdir patch from Badlop (EJAB-385)
	* tools/ejabberdctl: define EJABBERD_EBIN as from ejabberdctl.template
    
2007-09-25  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_s2s.erl: Max number of connections and max number
	of connections per node now can be specified via
	max_s2s_connections and max_s2s_connections_per_node acl rules

2007-09-14  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_s2s_out.erl: Changed to actual p1_fsm behaviour. It
	was working correctly as the API of p1_fsm and gen_fsm is strictly
	the same.
	
	* src/ejabberd_s2s_in.erl: Added debug hook for s2s loop (EJAB-358).
	
	* src/ejabberd_c2s.erl: Added debug hook for c2s loop (EJAB-358).
	
	* src/ejabberd_s2s.erl: open all missing connections if
	needed (Jerome Sautret).
	
	* src/ejabberd_s2s.erl: don't check blacklist for services (Jerome
	Sautret).
	
	* src/ejabberd_s2s.erl: Try to open all s2s connections at the
	same time, to guarantee the right order of the packets (Jerome
	Sautret).
	
	* src/ejabberd_s2s.erl: max_s2s_connexions_number local parameter
	added (Jerome Sautret).
