@@ -310,10 +310,6 @@ process_active_set(_LUser, _LServer, false) ->
     {result, [], #userlist{}}.
 
 
-
-
-
-
 process_list_set(LUser, LServer, {value, Name}, Els) ->
     case parse_items(Els) of
 	false ->
@@ -374,8 +370,8 @@ process_list_set(LUser, LServer, {value, Name}, Els) ->
 		    Error;
 		{atomic, {result, _} = Res} ->
 		    ejabberd_router:route(
-		      jlib:make_jid(LUser, ?MYNAME, ""),
-		      jlib:make_jid(LUser, ?MYNAME, ""),
+		      jlib:make_jid(LUser, LServer, ""),
+		      jlib:make_jid(LUser, LServer, ""),
 		      {xmlelement, "broadcast", [],
 		       [{privacy_list,
 			 #userlist{name = Name, list = List},
